<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App</string>
    <string name="home">home</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_newpin">Add Pin</string>
    <string name="action_notification">Notifications</string>
    <string name="action_newPin">Add Pin</string>
    <string name="search_hintLoc">Near this location</string>
    <string name="search_hintName">Restaurant Name Contains</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_activity_search">Find a restaurant that:</string>
    <string name="title_activity_filter">Find a restaurant that:</string>
    <string name="title_activity_addPin">Add Pin</string>
    <string name="button_clear_text">Clear</string>
    <string name="button_send_text">Submit</string>
    <string name="addPin_hintLoc">Location</string>
    <string name="button_current_text">Use Current</string>
    <string name="distance">Within X kms:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_filter_text">Filter</string>
    <string name="toggle_turn_on">"-"</string>
    <string name="toggle_turn_off">"+"</string>
    <string name="title_activity_marker_confirm">MarkerConfirm</string>
    <string name="title_activity_pin">PinActivity</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user_id">User ID </string>
    <string name="password">Password </string>
    <string name="button_login_text">Login</string>
    <string name="action_pins">My Pins</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="action_friends">My Friends</string>
    <string name="action_addFriend">Add Friend</string>
    <string name="action_home">Home</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="change_password">Change Password: </string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_new_password">Re-Enter New Password</string>
    <string name="button_change_pass">Change Password</string>
    <string name="delete_account">Delete Account:</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="pin_types">Pin Types:</string>
    <string name="checkbox_favourite">Favourite</string>
    <string name="checkbox_recommended">Friend Recommended</string>
    <string name="checkbox_wishlist">Wishlist</string>
    <string name="checkbox_liked">Like</string>
    <string name="checkbox_disliked">Disliked</string>

</resources>
