<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:uiOptions="splitActionBarWhenNarrow">
    <!-- Search / will display always -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="always"/>

    <!-- Location Found -->
    <item android:id="@+id/action_newpin"
        android:icon="@drawable/ic_action_newpin"
        android:title="@string/action_newpin"
        android:showAsAction="always" />

    <!-- Refresh -->
    <item android:id="@+id/action_notification"
        android:icon="@drawable/ic_action_notification"
        android:title="@string/action_notification"
        android:showAsAction="always"/>

    <item android:id="@+id/action_login"
        android:icon="@drawable/ic_button"
        android:title="Login"
        android:showAsAction="never"/>

    <item android:id="@+id/action_pins"
        android:icon="@drawable/ic_action_newpin"
        android:title="@string/action_pins"
        android:showAsAction="never" />

    <item android:id="@+id/action_friends"
        android:icon="@drawable/ic_action_person"
        android:title="@string/action_friends"
        android:showAsAction="never" />

    <item android:id="@+id/action_account"
        android:icon="@drawable/ic_button"
        android:title="Account Setting"
        android:showAsAction="never"/>

    <item android:id="@+id/action_logout"
        android:title="Logout"
        android:showAsAction="never"/>

</menu>
