<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.restaurantapp.phoneapp.restaurantpinner.AccountActivity">

    <TextView android:text="@string/change_password" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_pass" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editOldPassword"
        android:layout_marginTop="33dp"
        android:hint="@string/old_password"
        android:layout_below="@+id/change_pass"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editNewPassword"
        android:layout_below="@+id/editOldPassword"
        android:layout_alignLeft="@+id/editOldPassword"
        android:layout_alignStart="@+id/editOldPassword"
        android:layout_marginTop="26dp"
        android:hint="@string/new_password"
        android:layout_alignRight="@+id/editOldPassword"
        android:layout_alignEnd="@+id/editOldPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editReNewPassword"
        android:layout_below="@+id/editNewPassword"
        android:layout_alignLeft="@+id/editNewPassword"
        android:layout_alignStart="@+id/editNewPassword"
        android:layout_marginTop="32dp"
        android:hint="@string/re_new_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_change_pass"
        android:id="@+id/buttonChangePass"
        android:layout_below="@+id/editReNewPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear_text"
        android:id="@+id/button_clear"
        android:layout_alignBottom="@+id/buttonChangePass"
        android:layout_alignRight="@+id/editReNewPassword"
        android:layout_alignEnd="@+id/editReNewPassword"
        android:layout_toRightOf="@+id/buttonChangePass"
        android:layout_toEndOf="@+id/buttonChangePass"
        android:onClick="onClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/delete_account"
        android:id="@+id/textDeleteHeading"
        android:layout_below="@+id/buttonChangePass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_account"
        android:id="@+id/buttonDeleteAcct"
        android:layout_below="@+id/textDeleteHeading"
        android:layout_toRightOf="@+id/change_pass"
        android:layout_toEndOf="@+id/change_pass"
        android:layout_marginTop="45dp"
        android:onClick="onClick"/>

</RelativeLayout>
