<TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <TableRow android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/pin_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPinType"
            android:textSize="15sp"/>
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/filter_row_0"
            android:orientation="vertical">


            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/fav_icon"
                android:src="@drawable/ic_action_favorite"
                android:layout_gravity="center_horizontal"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_favourite"
                android:id="@+id/chkFavourite"
                android:checked="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="3"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/rec_icon"
                android:src="@drawable/ic_action_person"
                android:layout_gravity="center_horizontal"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_recommended"
                android:id="@+id/chkRecommended"
                android:checked="false"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </TableRow>
    <TableRow android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/wish_icon"
                android:src="@drawable/ic_action_important"
                android:layout_gravity="center_horizontal"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_wishlist"
                android:id="@+id/chkWishlist"
                android:checked="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/filter_row_1"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/liked_icon"
                android:src="@drawable/ic_action_good"
                android:layout_gravity="center_horizontal"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_liked"
                android:id="@+id/chkLiked"
                android:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/filter_row_4"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/dislike_icon"
                android:src="@drawable/ic_action_bad"
                android:layout_gravity="center_horizontal"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_disliked"
                android:id="@+id/chkDislike"
                android:checked="false" />
        </LinearLayout>
    </TableRow>

</TableLayout>